style.css
/*
Theme Name: Rookie
Theme URI: https://www.themeboy.com/rookie/
Author: ThemeBoy
Author URI: https://www.themeboy.com
Description: Rookie is a fully responsive theme made for sports organisations looking to use the SportsPress plugin. Once you’ve installed the theme and SportsPress, you'll be able to select a preset for your sport and demo content to help you get started on building your sports website.
Version: 1.2
License: GNU General Public License v2 or later
License URI: http://www.gnu.org/licenses/gpl-2.0.html
Text Domain: rookie
Tags: black, blue, brown, gray, green, orange, pink, purple, red, silver, tan, white, yellow, dark, light, one-column, two-columns, right-sidebar, fluid-layout, responsive-layout, custom-background, custom-colors, custom-menu, editor-style, featured-images, full-width-template, rtl-language-support, sticky-post, threaded-comments, translation-ready

This theme, like WordPress, is licensed under the GPL.
Use it to make something cool, have fun, and share what you've learned with others.

Rookie is based on Underscores http://underscores.me/, (C) 2012-2014 Automattic, Inc.

Resetting and rebuilding styles have been helped along thanks to the fine work of
Eric Meyer http://meyerweb.com/eric/tools/css/reset/index.html
along with Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
and Blueprint http://www.blueprintcss.org/
*/

/* Heading Font */
h1,
h2,
h3,
h4,
h5,
h6,
caption,
.menu-toggle,
.main-navigation a,
.gallery-caption,
.wp-caption-text.gallery-caption,
.sp-table-caption,
.sp-template-countdown time span,
.sp-template-event-logos,
.sp-template .player-gallery-group-name,
.single-sp_staff .entry-header .entry-title strong {
	font-family: "Oswald", sans-serif;
	font-weight: normal;
	text-transform: uppercase;
}

/* Body Font */
body,
button,
input,
select,
textarea,
.sp-template-countdown .event-name,
.sp-template-countdown .event-venue,
.sp-template-countdown .event-league,
.sp-template-countdown time span small,
.sp-template-event-blocks .event-title {
	font-family: "Lato", sans-serif;
	text-transform: none;
}

/* Site Footer Font */
.site-info {
	text-transform: uppercase;
}

/* Table Cell Font */
th,
td {
	font-size: 14px;
	text-align: center;
}

/* Body Text Color */
body,
button,
input,
select,
textarea {
	color: #222;
}

blockquote,
q {
	font-weight: bold;
	font-size: 18px;
}

blockquote p {
	display: inline;
}

cite {
	display: block;
	font-weight: normal;
	font-size: 14px;
	position: relative;
	text-indent: 2.5em;
	margin-top: 0.5em;
}

cite:before {
	content: "";
	display: block;
	position: absolute;
	left: 0;
	top: 0.75em;
	width: 2em;
	height: 1px;
}

/* Quote Icon Color */
blockquote:before,
q:before,
cite:before {
	color: #00a69c;
}

/* Code Color */
pre,
code,
kbd,
tt,
var {
	background: #f4f4f4;
	border: 1px solid #e0e0e0;
}

table {
	background: #f4f4f4;
	border-top: 1px solid #e0e0e0;
}

/* Horizontal Rule Color */
hr {
	background: #ccc;
}

/* Caption Color */
caption {
	color: #fff;
	background: #2b353e;
	border-top: 8px solid #00a69c;
}

/* Table Cell Color */
th,
td {
	border-bottom: 1px solid #e0e0e0;
}

tbody td {
	border-right: 1px solid #e0e0e0;
}

th:first-child,
td:first-child {
	border-left: 1px solid #e0e0e0;
}

th:last-child,
td:last-child {
	border-right: 1px solid #e0e0e0;
}

/* Button Color */
button,
input[type="button"],
input[type="reset"],
input[type="submit"] {
	color: #fff;
	background: #00a69c;
	border-radius: 3px;
}

/* Button Hover Color */
button:hover,
input[type="button"]:hover,
input[type="reset"]:hover,
input[type="submit"]:hover,
button:focus,
input[type="button"]:focus,
input[type="reset"]:focus,
input[type="submit"]:focus,
button:active,
input[type="button"]:active,
input[type="reset"]:active,
input[type="submit"]:active {
	background: #00958c;
}

/* Input Color */
input[type="text"],
input[type="email"],
input[type="url"],
input[type="password"],
input[type="search"],
textarea {
	color: #666;
	border: 1px solid #ccc;
}

/* Input Focus Color */
input[type="text"]:focus,
input[type="email"]:focus,
input[type="url"]:focus,
input[type="password"]:focus,
input[type="search"]:focus,
textarea:focus {
	color: #111;
}

/* Background Color */
body {
	background: #e8e8e8;
}

/* Site Logo */
.site-logo {
	margin: -1.75em 0 0.875em;
}

/* Custom Header */
.header-area-custom .site-branding {
	padding: 1.75em;
	min-height: 150px;
	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
}

/* Tagline Color */
.site-branding hgroup {
	color: #222;
}

/* Content Color */
.site-content {
	background: #fff;
	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
}

/* Footer Color */
.site-footer {
	background: #222;
	color: #8b8b8b;
}

.site-footer .footer-widget-region {
	padding: 20px;
}

.site-footer .widget-title {
	color: #e8e8e8;
}

/* Footer Logo */
.site-footer .footer-logo {
	padding: 20px;
}

/* Info Link Color */
.site-info {
	color: #8b8b8b;
}

.site-info a,
.site-info a:hover {
	color: #8b8b8b;
}

/* Link Color */
a {
	color: #00a69c;
}

/* Link Hover Color */
a:hover {
	color: #00958c;
}

/* Menu Color */
.main-navigation {
	background: #2b353e;
}

/* Menu Link Color */
.main-navigation a {
	color: rgba(255, 255, 255, 0.7);
}

/* Menu Toggle */
.main-navigation .menu-toggle {
	color: rgba(255, 255, 255, 0.7);
	background: transparent;
	outline: none;
}
.main-navigation.toggled .menu-toggle {
	color: #fff;
	background: rgba(255, 255, 255, 0.1);
	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.1);
}

/* Menu Active Link Color */
.main-navigation .nav-menu > .current-menu-item > a,
.main-navigation .nav-menu > .current-menu-parent > a,
.main-navigation .nav-menu > .current-menu-ancestor > a,
.main-navigation .nav-menu > .current_page_item > a,
.main-navigation .nav-menu > .current_page_parent > a,
.main-navigation .nav-menu > .current_page_ancestor > a {
	color: #fff;
}

/* Menu Hover Link Color */
.main-navigation .nav-menu > li:hover > a {
	color: #fff;
	background: #00a69c;
}
/* ... */

